--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
-    <!ENTITY appName "OppiaMobile">
-    <!ENTITY companyName "Digital Campus"> ]>
+    <!ENTITY appName "Sierra Leone Community Health Academy Demo">
+    <!ENTITY companyName "Last Mile Health"> ]>
 <resources>
 
     <string name="app_name">&appName;</string>
