--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appName "OppiaMobile"><!ENTITY companyName "Digital Campus"> ]>
+<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appName "Sierra Leone Community Health Academy Demo"><!ENTITY companyName "Last Mile Health"> ]>
 <resources>
     <string name="app_name">&appName;</string>
     <string name="app_logo_alt">&companyName; Logo</string>
@@ -26,7 +26,7 @@
     <string name="fragment_welcome_title">Welcome to &appName;</string>
     <string name="fragment_welcome_desc">&appName; is a mobile learning platform for delivering learning content, video and quizzes.\n\n\'Oppia\' means \'to learn\' in Finnish</string>
     <string name="fragment_welcome_login_info">To get started with &appName;, you will need to register or login.</string>
-    <string name="fragment_welcome_powered_by">Powered by <a href="http://digital-campus.org/oppiamobile/">OppiaMobile</a></string>
+    <string name="fragment_welcome_powered_by">Powered by <a href="https://lastmilehealth.org/what-we-do/community-health-academy/">COMMUNITY HEALTH ACADEMY</a> and <a href="http://digital-campus.org/oppiamobile/">OppiaMobile</a></string>
 
     <string name="tab_title_about">About</string>
     <string name="tab_title_badges">Badges</string>
